# sports-calendar-hub

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml  update-calendars.yml
apps-script-gateway/: Auth.gs  CalendarReader.gs  CalendarWriter.gs  CanonicalKey.gs  Config.gs  Código.gs  Exporter.gs  Privacy.gs  Reports.gs  ScopeValidation.gs  Tests.gs  appsscript.json
data/: events.json  scope_rules.json  sources.json
docs/: all.ics  automobilismo.ics  brasileirao.ics  clubes-regionais.ics  continentais.ics  copas-do-mundo.ics  escopo-mestre.md  index.html  olimpiadas-pan.ics  outros-esportes.ics  premier-league.ics  red-bull.ics  sao-paulo.ics  selecao-brasileira.ics
reports/: import-summary.json  import-summary.md  sync-latest.json
src/: __init__.py  calendar_payload.py  calendar_push.py  change_history.py  config.py  deduplicate.py  ics_generator.py  main.py  models.py  normalize.py  privacy_scan.py  remote_sync.py  scope_rules.py  sync_report.py  validate_ics.py
src/importers/: __init__.py  apps_script_json.py  google_sheet_csv.py
tests/: __init__.py  test_apps_script_importer.py  test_calendar_payload.py  test_calendar_push.py  test_deduplicate.py  test_ics_generator.py  test_importer.py  test_normalize.py  test_privacy_scan.py  test_remote_sync.py  test_scope_rules.py  test_sequence_history.py
tests/fixtures/: apps_script_export.json  calendar_apply_response.json  calendar_dry_run_response.json  events_demo.json
